fix slight home page image alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ footer {
 	background-size: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
-  margin-top: -8px;
+  margin-top: -1.2vw;
   z-index: 0;
 }
 
